--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://EugeniiZinich.github.io/-filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /filmoteka-team-project-js/"
+    "build": "parcel build src/*.html --public-url /-filmoteka/"
   },
   "repository": {
     "type": "git",
